appsec/onboarding/setups/proxies/envoy/envoy.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
    - name: listener_http
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                generate_request_id: true
                request_id_extension:
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.request_id.uuid.v3.UuidRequestIdConfig
                    use_request_id_for_trace_sampling: false
                tracing:
                  provider:
                    name: envoy.tracers.datadog
                    typed_config:
                      "@type": type.googleapis.com/envoy.config.trace.v3.DatadogConfig
                      collector_cluster: datadog_agent
                      service_name: appsec-dogfooding-envoy
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: appsec_local
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: /
                          route:
                            cluster: api_backend
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: datadog_agent
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: datadog_agent
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: datadog-agent
                      port_value: 8126

    - name: api_backend
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: api_backend
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: appsec-test-api
                      port_value: 8000
